Added userGenres and recommend books based on that
